--- a/Warehouse/Warehouse/MainWindow.xaml
+++ b/Warehouse/Warehouse/MainWindow.xaml
@@ -6,11 +6,10 @@
         xmlns:local="clr-namespace:Warehouse"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Canvas>
-        <Button Content="Connect" Canvas.Left="331" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" Width="176" Height="131" Click="Button_Click"/>
-        <Label Content="" Name="statusTextBlock" Canvas.Left="149" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center" Width="122"/>
-        <Label Content="" Name="queryLabel" Canvas.Left="32" Canvas.Top="297" HorizontalAlignment="Left" VerticalAlignment="Top" Width="106" Height="99"/>
-        <Label Content="" Name="queryInsert" Canvas.Left="646" Canvas.Top="250" HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" Height="64"/>
+   
+    <Grid>
+        <TextBox x:Name="Username" HorizontalAlignment="Left" Margin="313,131,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Login" HorizontalAlignment="Left" Margin="313,183,0,0" VerticalAlignment="Top" Click="Button_Click"/>
 
-    </Canvas>
+    </Grid>
 </Window>
