--- a/Warehouse/InsertPage.xaml
+++ b/Warehouse/InsertPage.xaml
@@ -11,7 +11,7 @@
         <Label Content="Quantity of the object" HorizontalAlignment="Left" Margin="146,57,0,0" VerticalAlignment="Top" Width="134"/>
         <TextBox x:Name="name" HorizontalAlignment="Left" Margin="10,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Height="22"/>
         <TextBox x:Name="qty" HorizontalAlignment="Left" Margin="184,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="58" Height="22"/>
-        <Button x:Name="insert" Content="Insert itm" HorizontalAlignment="Left" Margin="123,235,0,0" VerticalAlignment="Top" Click="insert_Click"/>
+        <Button x:Name="insert" Content="Insert item" HorizontalAlignment="Left" Margin="123,235,0,0" VerticalAlignment="Top" Click="insert_Click"/>
         <ComboBox x:Name="Where" HorizontalAlignment="Left" Margin="12,21,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="Category" HorizontalAlignment="Left" Margin="162,21,0,0" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="brand" HorizontalAlignment="Left" Margin="92,138,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
