--- a/Warehouse/MainWindow.xaml
+++ b/Warehouse/MainWindow.xaml
@@ -8,11 +8,11 @@
         Title="MainWindow" Height="450" Width="800">
    
     <Grid>
-        <TextBox x:Name="Username" HorizontalAlignment="Left" Margin="33,88,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="Username" HorizontalAlignment="Left" Margin="33,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="LoginButton" Content="Login" HorizontalAlignment="Left" Margin="33,131,0,0" VerticalAlignment="Top" Click="Login_Click"/>
         <Label Content="Login here: " HorizontalAlignment="Left" Margin="33,40,0,0" VerticalAlignment="Top"/>
         <Label Content="Register new user: " HorizontalAlignment="Left" Margin="426,40,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="UserRegister" Text="Username" HorizontalAlignment="Left" Margin="426,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="UserRegister" Text="" HorizontalAlignment="Left" Margin="426,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <CheckBox x:Name="IsEmployeeCheckbox" Content="Employee" HorizontalAlignment="Left" Margin="589,91,0,0" VerticalAlignment="Top"/>
         <Button x:Name="Register" Content="Register" HorizontalAlignment="Left" Margin="426,131,0,0" VerticalAlignment="Top" Click="Register_Click"/>
         <Label x:Name="LoginFailed" Content="" HorizontalAlignment="Left" Margin="206,84,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.241,-0.125"/>
