--- a/Warehouse/InsertPage.xaml
+++ b/Warehouse/InsertPage.xaml
@@ -10,7 +10,7 @@
         <Label Content="Name of the object" HorizontalAlignment="Left" Margin="10,57,0,0" VerticalAlignment="Top" Width="120"/>
         <Label Content="Quantity of the object" HorizontalAlignment="Left" Margin="146,57,0,0" VerticalAlignment="Top" Width="134"/>
         <TextBox x:Name="name" HorizontalAlignment="Left" Margin="10,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120" Height="22"/>
-        <TextBox x:Name="qty" HorizontalAlignment="Left" Margin="184,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="58" Height="22"/>
+        <TextBox x:Name="qty" HorizontalAlignment="Left" Margin="184,86,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="58" Height="22" PreviewTextInput="NumberValidationTextBox"/>
         <Button x:Name="insert" Content="Insert item" HorizontalAlignment="Left" Margin="123,235,0,0" VerticalAlignment="Top" Click="insert_Click"/>
         <ComboBox x:Name="Where" HorizontalAlignment="Left" Margin="12,21,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="Category" HorizontalAlignment="Left" Margin="162,21,0,0" VerticalAlignment="Top" Width="120"/>
