--- a/Warehouse/MainWindow.xaml
+++ b/Warehouse/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Warehouse"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Warehouse" Height="450" Width="800">
    
     <Grid>
         <TextBox x:Name="Username" HorizontalAlignment="Left" Margin="33,88,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
